{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 557,
  "lineage": "650eab61-d622-e42e-7c33-4cd2b12cb1d5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vinoth-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:444913803583:internet-gateway/igw-038da957e2dd1c8e4",
            "id": "igw-038da957e2dd1c8e4",
            "owner_id": "444913803583",
            "tags": {
              "Name": "vinoth-igw"
            },
            "tags_all": {
              "Name": "vinoth-igw"
            },
            "vpc_id": "vpc-032c19ccaf7794b35"
          },
          "dependencies": [
            "aws_vpc.vinoth-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vinoth-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:444913803583:route-table/rtb-02a6ddc63b5f75c89",
            "id": "rtb-02a6ddc63b5f75c89",
            "owner_id": "444913803583",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038da957e2dd1c8e4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vinoth-public-crt"
            },
            "tags_all": {
              "Name": "vinoth-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-032c19ccaf7794b35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vinoth-igw",
            "aws_vpc.vinoth-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vinoth-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d29c93d94d965694",
            "route_table_id": "rtb-02a6ddc63b5f75c89",
            "subnet_id": "subnet-06b6ef23e9d8c65d9"
          },
          "dependencies": [
            "aws_internet_gateway.vinoth-igw",
            "aws_route_table.vinoth-public-crt",
            "aws_subnet.my_subnets",
            "aws_vpc.vinoth-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vinoth-crta-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0008d3d3eef1dcf86",
            "route_table_id": "rtb-02a6ddc63b5f75c89",
            "subnet_id": "subnet-01c1705196ae068e6"
          },
          "dependencies": [
            "aws_internet_gateway.vinoth-igw",
            "aws_route_table.vinoth-public-crt",
            "aws_subnet.my_subnets",
            "aws_vpc.vinoth-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vinoth-crta-public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd897ebce361f7bf",
            "route_table_id": "rtb-02a6ddc63b5f75c89",
            "subnet_id": "subnet-07ec0cb4df84ba357"
          },
          "dependencies": [
            "aws_internet_gateway.vinoth-igw",
            "aws_route_table.vinoth-public-crt",
            "aws_subnet.my_subnets",
            "aws_vpc.vinoth-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:444913803583:security-group/sg-09e57b638d89604c1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e57b638d89604c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221112110803587100000001",
            "name_prefix": "terraform-",
            "owner_id": "444913803583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vinoth-ssh-allowed"
            },
            "tags_all": {
              "Name": "vinoth-ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-032c19ccaf7794b35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vinoth-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:444913803583:subnet/subnet-06b6ef23e9d8c65d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b6ef23e9d8c65d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444913803583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-032c19ccaf7794b35"
          },
          "dependencies": [
            "aws_vpc.vinoth-test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:444913803583:subnet/subnet-01c1705196ae068e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c1705196ae068e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444913803583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-032c19ccaf7794b35"
          },
          "dependencies": [
            "aws_vpc.vinoth-test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:444913803583:subnet/subnet-07ec0cb4df84ba357",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ec0cb4df84ba357",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444913803583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-032c19ccaf7794b35"
          },
          "dependencies": [
            "aws_vpc.vinoth-test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:444913803583:subnet/subnet-06a574676371234d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a574676371234d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444913803583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-032c19ccaf7794b35"
          },
          "dependencies": [
            "aws_vpc.vinoth-test"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:444913803583:subnet/subnet-039942ef544e7d21f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039942ef544e7d21f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444913803583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-032c19ccaf7794b35"
          },
          "dependencies": [
            "aws_vpc.vinoth-test"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:444913803583:subnet/subnet-0783e82bd7bb20c7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0783e82bd7bb20c7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444913803583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-032c19ccaf7794b35"
          },
          "dependencies": [
            "aws_vpc.vinoth-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vinoth-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:444913803583:vpc/vpc-032c19ccaf7794b35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db0ff840be576364",
            "default_route_table_id": "rtb-06d497bd5033170e3",
            "default_security_group_id": "sg-0c76f3be5eb0bbb43",
            "dhcp_options_id": "dopt-2e31d247",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032c19ccaf7794b35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d497bd5033170e3",
            "owner_id": "444913803583",
            "tags": {
              "Name": "vinoth-vpc"
            },
            "tags_all": {
              "Name": "vinoth-vpc"
            }
          }
        }
      ]
    }
  ]
}